# AlmaEventFlow-backend

./: .gitignore  .gitmodules  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
docker/postgres/: init.sh
migrations/: env.py  utils.py
migrations/versions/event/: 6c46d892227b_init.py  b2c3d4e5f6a7_add_event_type_and_format.py  c3d4e5f6a7b8_add_calendar_tables.py  f3a1b2c3d4e5_add_event_level.py
migrations/versions/geo/: 30b5fd503738_init.py  cda6ec97caa5_add_parsed.py
migrations/versions/notify/: b7f3a9c1d2e4_init.py
migrations/versions/org/: 7bd9ba436213_init.py
migrations/versions/profile/: 60bac58e30bb_init.py
migrations/versions/user/: 4c8a3b2d1e5f_add_refresh_token_table.py  4fa1257042c1_add_sessions.py  5cf59abf283f_init.py
src/: main.py  monolith.py  report.py
src/aef/: Dockerfile  run.sh
src/aef/api/: __init__.py
src/aef/app/: app.py  contextmanager.py
src/core/app/: __init__.py  config.py  contextmanager.py
src/core/broker/: kafka.py  local.py
src/core/config/: get_version.py  settings.py  types.py
src/core/database/: __init__.py
src/core/dependencies/: auth.py  redis.py  s3.py  session.py  sqlalchemy.py  uow.py
src/core/enum/: kafka.py  mq.py  notify.py  topic.py
src/core/models/: address.py  collective.py  file.py  location.py  organization.py  person.py
src/core/mq/: queue.py
src/core/repository/: abc.py  address.py  location.py  organization.py  person.py
src/core/schema/: error.py  pagination.py  user.py
src/core/service/: base.py
src/core/uow/: abc.py  base.py  beanie.py  sqlalchemy.py  union.py
src/core/utils/: cors.py  (+7 more)
src/event/: Dockerfile  __init__.py  run.sh
src/geo/: Dockerfile  run.sh
src/mail/: DockerFile  main.py  run.sh
src/notify/: Dockerfile  ROADMAP.md  TECH_TASK.md  main.py  run.sh
src/org/: Dockerfile  main.py  run.sh
src/profile/: Dockerfile  main.py  run.sh
src/user/: Dockerfile  main.py  run.sh
static/email/: verify_message.html
templates/email/: notification.html  reset_message.html  verify_message.html
tests/: conftest.py
tests/event/: test_notification_builder.py
tests/notify/: conftest.py  test_batching.py  test_integration_dispatch.py  test_integration_webpush.py  test_load_webpush.py  test_retry_policy.py
(+472 files in other folders)
