[project]
name = "alma-event-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.26.0",
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "apscheduler>=3.11.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "beanie>=2.0.0",
    "fastapi>=0.117.1",
    "faststream[kafka]>=0.5.48",
    "passlib>=1.7.4",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "redis>=7.1.0",
    "ruff>=0.14.8",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
bot = [
    "aiogram>=3.22.0",
    "python-i18n[yaml]>=0.3.9",
]
dev = [
    "pytest>=9.0.1",
    "uvicorn>=0.37.0",
]
geo = [
    "beanie>=2.0.0",
    "geoalchemy2[shapely]>=0.18.1",
]
mail = [
    "fastapi-mail>=1.5.0",
]
prod = [
    "gunicorn>=23.0.0",
]
report = [
    "docxtpl>=0.20.2",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "treport>=0.0.6",
]
user = [
    "fastapi-users[oauth,sqlalchemy]>=14.0.1",
]
