[project]
name = "alma-event-flow"
version = "0.1.3-beta"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=3.7.0",
    "aiogram>=3.29.0",
    "aiohttp>=3.14.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "beanie>=2.0.0",
    "colorama>=0.4.6",
    "fastapi>=0.137.1",
    "fastapi-filter[sqlalchemy]>=3.0.0",
    "faststream[kafka]>=0.7.1",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=8.0.0",
    "ruff>=0.15.17",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
bot = [
    "python-i18n[yaml]>=0.3.9",
]
dev = [
    "pytest>=9.1.0",
    "uvicorn>=0.37.0",
]
event = [
    "icalendar>=7.1.3",
]
geo = [
    "beanie>=2.0.0",
    "geoalchemy2[shapely]>=0.20.0",
]
mail = [
    "fastapi-mail>=1.6.4",
]
prod = [
    "gunicorn>=26.0.0",
]
report = [
    "docxtpl>=0.20.2",
    "matplotlib>=3.11.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "treport>=0.0.6",
]
user = [
    "fastapi-users[oauth,sqlalchemy]>=15.0.5",
    "jinja2>=3.1.6",
]
